--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ author:
       url: "http://bus.wtf"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
+      url: "https://github.com/sidetrackedmind"
 
 footer:
   links:
